# swiss-parliament-data

./: .gitignore  README.md  pyproject.toml  scrape.sh
.github/workflows/: ci.yml  scrape.yml
factions_details/: faction_1.json  faction_137.json  faction_2.json  faction_3.json  faction_4.json  faction_6.json
factions_details.backup/: faction_1.json  faction_4.json  faction_6.json  faction_99.json
src/: __init__.py
src/scraper/: __init__.py  __main__.py  api_client.py  main.py  mappings.py  models.py
tests/: __init__.py  test_main.py  test_mappings.py  test_models.py
